deploy/main/backend-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi
  labels:
    app: webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapi
  
  template:
    metadata:
      labels:
        app: webapi
    
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: webapi
          image: sinnet.azurecr.io/webapi:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
          # env:
          # - name: SECRETS_MONGODB_POSESOR_PROD
          #   valueFrom:
          #     secretKeyRef:
          #       name: posesor-mongodb
          #       key: mongodb.posesor.prod
