deploy/main/db-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app: db
spec:
  selector:
    matchLabels:
      app: db
      role: master
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: db
        role: master
        tier: backend
    spec:
      containers:
      - name: db
        image: postgres:11-alpine
        ports:
        - containerPort: 5432
