deploy/main/webapi-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi-dep
  labels:
    app: webapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapi
  
  template:
    metadata:
      labels:
        app: webapi
    
    spec:
      # imagePullSecrets:
      #   - name: regcred
      containers:
        - name: webapi
          image: sinnet.azurecr.io/webapi:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
