deploy/main/webapp-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-dep
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  
  template:
    metadata:
      labels:
        app: webapp
    
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: webapp
          image: sinnet.azurecr.io/webapp:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 80
