deploy/main/default-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-svc
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: default-backend
