deploy/main/kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-dep
  labels:
    app: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  
  template:
    metadata:
      labels:
        app: webapp
    
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: webapp
          image: sinnet.azurecr.io/webapp:##BUILD_ID##
          imagePullPolicy: Always
          ports:
          - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
  labels:
    app: webapp-scv
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: webapp
