deploy/main/webapi-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapi-svc
  labels:
    app: webapi
spec:
  type: NodePort
  ports:
  - port: 8080
  selector:
    app: webapi
