deploy/main/webapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
  labels:
    app: webapp
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: webapp
