deploy/main/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    # Securing Ingress Resources https://cert-manager.io/docs/usage/ingress/
    cert-manager.io/cluster-issuer: my-letsencrypt-issuer
spec:
  tls:
  - hosts:
    - raport.sin.net.pl
    secretName: tls-secret
  rules:
  - host: raport.sin.net.pl
    http:
      paths:
        - path: /graphiql
          backend:
            serviceName: webapi
            servicePort: 8080
        - path: /vendor
          backend:
            serviceName: webapi
            servicePort: 8080
        - path: /graphql
          backend:
            serviceName: webapi
            servicePort: 8080
        - path: /api
          backend:
            serviceName: webapi
            servicePort: 8080
        - path: /api
          backend:
            serviceName: webapi
            servicePort: 8080

        - path: /
          backend:
            serviceName: webapp
            servicePort: 80
